<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>touch_description</name>
  <version>0.0.0</version>
  <description>URDF/xacro description for the minimal ros2_control Touch workspace.</description>

  <maintainer email="calaw@example.com">calaw</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>liburdfdom-tools</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
